deployment/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-registry
  labels:
    name: service-registry
