deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serviceregistry
  labels:
    name: serviceregistry
    environment: production
